maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:15: error: not found: value prendsBiscuit
  prendsBiscuit()
  ^